--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+v2.3 ??? November 2018
+  - Added support for Python v3.6.7.
+
 v2.2 30th August 2018
   - Added support for Python v2.7.15, v3.4.8, v3.4.9, v3.5.5, v3.5.6, v3.6.5,
     v3.6.6 and v3.7.0.
