--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+v2.3.1 2nd December 2018
+  - Added the 'edition' option to the Qt5 component plugin.
+
 v2.3 17th November 2018
   - Added support for Python v3.6.7 and v3.7.1.
   - Added the 'version' option to the Python component plugin.
